--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -18,6 +18,7 @@
 
 .main-part-one h1 {
   color: #fff;
+  margin-top: 100px;
 }
 
 .btn {
@@ -42,4 +43,11 @@
   background-color: #fff;
   color: #251b37;
   border: none;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 700px) {
+  .main-part-one h1 {
+    margin-top: 200px;
+  }
 }
